[package]
name = "elliptic_test"
version = "0.1.0"
authors = ["Kasper S. Nielsen (laptop) <Kasper@s-nielsen.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/field.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec/" }

